--- a/src/pages/LoginPage.module.css
+++ b/src/pages/LoginPage.module.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
+:global(body.login-body) {
   background: url('../assets/loginpage/todo.jpeg');
   background-size: cover;
   background-position: center;
